--- a/WindowsFormsExercise/CalculatorApp.csproj
+++ b/WindowsFormsExercise/CalculatorApp.csproj
@@ -81,5 +81,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Images\Logo.png" />
+    <None Include="Resources\Logo.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
